# SMS_Spam_Prediction_UAP-ML

./: .gitignore  .pdm-python  README.md  Spam_Detection.ipynb  pyproject.toml  upload_models_to_hf.py
src/: app.py  requirements.txt
src/inference/: bert_infer.py  bilstm_infer.py  distilbert_infer.py
src/models/: bilstm_config.json  bilstm_tokenizer.pkl
