[project]
name = "UAP_ML"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "RNikmah", email = "rnikmah2910@gmail.com"},
]
dependencies = [
    "streamlit>=1.28.0",
    "tensorflow>=2.15.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "huggingface-hub>=0.19.0",
    "numpy<2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "protobuf<5.0.0"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
